Extruded vertex from subdivion surface shows edge incorrectly in viewport #60408

Closed
opened 2019-01-10 22:56:12 +01:00 by Daniel queen · 9 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: nvidia gt650m

Blender Version
Broken: version: 2.80 (sub 40), branch: blender2.7, commit date: 2019-01-08 23:33, hash: 3c3d80ea22, type: Release
Worked: 2.79b

Extruded vertex from subdivided mesh (with shrinkwrap modifier + edit cage) shows many vertices instead of extruded one. Distortion in edge plus vertex extruded from. Seen in retopology workflows.

Reproduction:
Create simple sculpted mesh to retop over.
Create plane, enable snap to face, project + align.
Add subD modifier (3 levels in view), add shrinkwrap modifier, pick sculpt, above surface, offset .01
Align plane over sculpt as in retop workflow.
Extrude vertex, edge shows weirdness.

(pushing through and creating full face, corrects error. unfinished faces all show error.

Included .blend file. easier to see than explain. also side by side screenshot (left side = 2.79, right = 2.8).blender_extrude_bug.jpg

retop_bug2.blend

**System Information** Operating system: Ubuntu 18.04 Graphics card: nvidia gt650m **Blender Version** Broken: version: 2.80 (sub 40), branch: blender2.7, commit date: 2019-01-08 23:33, hash: 3c3d80ea22af, type: Release Worked: 2.79b Extruded vertex from subdivided mesh (with shrinkwrap modifier + edit cage) shows many vertices instead of extruded one. Distortion in edge plus vertex extruded from. Seen in retopology workflows. Reproduction: Create simple sculpted mesh to retop over. Create plane, enable snap to face, project + align. Add subD modifier (3 levels in view), add shrinkwrap modifier, pick sculpt, above surface, offset .01 Align plane over sculpt as in retop workflow. Extrude vertex, edge shows weirdness. (pushing through and creating full face, corrects error. unfinished faces all show error. Included .blend file. easier to see than explain. also side by side screenshot (left side = 2.79, right = 2.8).![blender_extrude_bug.jpg](https://archive.blender.org/developer/F6245365/blender_extrude_bug.jpg) [retop_bug2.blend](https://archive.blender.org/developer/F6245369/retop_bug2.blend)
Author

Added subscriber: @crono782

Added subscriber: @crono782

#60562 was marked as duplicate of this issue

#60562 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

Screenshot from 2019-01-11 11-35-15.png

subdiv edge.blend

Not sure why multiple vertices are showing, still checking that.

![Screenshot from 2019-01-11 11-35-15.png](https://archive.blender.org/developer/F6252261/Screenshot_from_2019-01-11_11-35-15.png) [subdiv edge.blend](https://archive.blender.org/developer/F6252267/subdiv_edge.blend) Not sure why multiple vertices are showing, still checking that.

Added subscriber: @capnm

Added subscriber: @capnm

It's broken since switching to OpenSubdiv (9abcf56fa8)

It's broken since switching to OpenSubdiv (9abcf56fa8)
Member

Added subscriber: @rendetto

Added subscriber: @rendetto
Sergey Sharybin was assigned by Jacques Lucke 2019-01-16 15:14:09 +01:00

This issue was referenced by c4be1f861b

This issue was referenced by c4be1f861b39b2432a2777d48d38b3ce317e1638

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60408
No description provided.