Fix T60408: Loose edge distort vertex on a surface

Treat those vertices as infinitely sharp. This matches the way
how OpenSubdiv's topology is being created.